[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "neo4j>=6.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
